--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,7 @@ footer {
   color: #c9b3ff;
   font-size: 1.8rem;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+  text-decoration: none;
 }
 
 .nav-links {
