--- a/components/footer.html
+++ b/components/footer.html
@@ -1,3 +1,4 @@
   <footer>
+    <a href="feed.xml" target="_blank" class="rss-link" title="S’abonner au flux RSS">📡 Flux RSS</a>
     SephyLeaks – Projet communautaire non officiel. Soutenez-nous sur Ko-fi ✧
   </footer>
