--- a/css/article.css
+++ b/css/article.css
@@ -526,10 +526,9 @@
   position: relative;
 }
 
-.article-banner img {
+.article-banner img, .featured-image {
   width: 100%;
-  height: auto;
-  display: block;
+  aspect-ratio: 16 / 9;
   object-fit: cover;
 }
 
