--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,9 @@ body {
   position: relative;
   overflow-x: hidden;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 
 /* === Header === */
 header {
@@ -342,11 +344,17 @@ main {
 
 .card-image {
   height: 180px;
+  overflow: hidden;
   background-size: cover;
   background-position: center;
   border-bottom: 1px solid #444;
 }
-
+.card-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
 .card-content {
   padding: 1rem;
   display: flex;
